[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3graph"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Python package to create interactive network based on d3js."
readme = "README.md"
requires-python = ">=3"
license = "BSD-3-Clause"
keywords = [
    "Python",
    "network",
    "graph",
    "network analysis",
    "visualization",
    "interactive",
    "d3js",
    "d3graph",
    "data visualization",
    "web",
    "modular",
    "customizable"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    'pandas',
    'numpy',
    'colourmap',
    'networkx>2',
    'ismember',
    'jinja2',
    'packaging',
    'markupsafe',
    'python-louvain',
    'datazets',
    ]

[project.urls]
Homepage = "https://erdogant.github.io/d3graph"
Download = "https://github.com/erdogant/d3graph/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["d3graph"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "d3graph.__version__" }
